<resources>
    <string name="app_name">My Application</string>
    <!-- Layout Strings -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signup_text">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">email</string>
    <string name="username">username\n</string>
    <string name="phone_no">Phone No.</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="Login">Login</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="home">Home</string>
    <string name="reminders">Schedule</string>
    <string name="search">Search</string>
    <string name="groups">Groups</string>
    <string name="calendar_title">Calendar title</string>


</resources>